@@ -1,3 +1,8 @@
+2012-03-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* pia.c: Fix recently-introduced bug with MEMORY_cartA0BF_enabled being saved
+  twice in savestates - in both memory.c and pia.c.
+
+
 2012-03-10  Kostas Nakos  <knakos@gmail.com>
 * android/*: Rename android port to Colleen
 
